[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ev-charging-scheduler"
version = "1.0.0"
description = "OpenEnv-compatible EV charging scheduler environment"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "AI Engineering Team" }
]
dependencies = [
  "pydantic>=2.0.0",
  "numpy>=1.21.0",
  "openai>=1.0.0",
  "pytest>=7.0",
  "gradio>=3.50.0",
  "python-dotenv>=0.19.0",
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["ev_charging_env*"]
