[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ev-charging-env"
version = "1.0.0"
description = "EV Charging Scheduler for OpenEnv"
dependencies = [
  "pydantic>=2.0",
  "numpy>=1.24",
  "openai>=1.0",
  "openenv-core>=0.2.0",
]
[project.scripts]
server = "server.app:main"

[tool.hatch.build.targets.wheel]
packages = ["ev_charging_env"]

